// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TransactionHistoryDetail /> should render correctly when only 1 confirmation 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TransactionHistoryDetail
    address="0x00000000028942"
    amount="0.0011"
    confirmations={1}
    fiatValue="671.23"
    time={1995-12-17T03:24:00.000Z}
    txnId="0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
    type="received"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bordered": false,
      "children": <TransactionHistoryDetail.style__DetailPanel
        header={
                <TransactionHistoryDetail.style__Wrapper>
                        <TransactionHistoryDetail.style__Left>
                                <TransactionHistoryDetail.style__TypeIcon
                                        type="download"
                                />
                                <TransactionHistoryDetail.style__TypeText>
                                        Recieved from
                                </TransactionHistoryDetail.style__TypeText>
                                <TransactionHistoryDetail.style__GreenTextWrapper>
                                        0x00000000028942
                                </TransactionHistoryDetail.style__GreenTextWrapper>
                        </TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__DetailsWrapper>
                                <TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryItem.style__Received>
                                                +
                                                0.0011
                                        </TransactionHistoryItem.style__Received>
                                </TransactionHistoryDetail.style__Amount>
                                <TransactionHistoryDetail.style__FiatValue>
                                        ($671.23)
                                </TransactionHistoryDetail.style__FiatValue>
                                <TransactionHistoryDetail.style__TransactionHistoryTime>
                                        12/17/1995
                                </TransactionHistoryDetail.style__TransactionHistoryTime>
                        </TransactionHistoryDetail.style__DetailsWrapper>
                </TransactionHistoryDetail.style__Wrapper>
        }
        showArrow={false}
        style={
                Object {
                        "border": 0,
                      }
        }
>
        <div>
                <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
                >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                </TransactionHistoryDetail.style__TransactionId>
                <div
                        style={
                                Object {
                                        "marginBottom": 5,
                                      }
                        }
                >
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                1 
                        </TransactionHistoryDetail.style__GreenTextWrapper>
                        <TransactionHistoryDetail.style__TransactionStatus>
                                confirmation
                        </TransactionHistoryDetail.style__TransactionStatus>
                </div>
        </div>
</TransactionHistoryDetail.style__DetailPanel>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": "1",
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <TransactionHistoryDetail.style__TransactionId
                    href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                    target="_blank"
          >
                    0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
          </TransactionHistoryDetail.style__TransactionId>
          <div
                    style={
                              Object {
                                        "marginBottom": 5,
                                      }
                    }
          >
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              1 
                    </TransactionHistoryDetail.style__GreenTextWrapper>
                    <TransactionHistoryDetail.style__TransactionStatus>
                              confirmation
                    </TransactionHistoryDetail.style__TransactionStatus>
          </div>
</div>,
        "header": <TransactionHistoryDetail.style__Wrapper>
          <TransactionHistoryDetail.style__Left>
                    <TransactionHistoryDetail.style__TypeIcon
                              type="download"
                    />
                    <TransactionHistoryDetail.style__TypeText>
                              Recieved from
                    </TransactionHistoryDetail.style__TypeText>
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              0x00000000028942
                    </TransactionHistoryDetail.style__GreenTextWrapper>
          </TransactionHistoryDetail.style__Left>
          <TransactionHistoryDetail.style__DetailsWrapper>
                    <TransactionHistoryDetail.style__Amount>
                              <TransactionHistoryItem.style__Received>
                                        +
                                        0.0011
                              </TransactionHistoryItem.style__Received>
                    </TransactionHistoryDetail.style__Amount>
                    <TransactionHistoryDetail.style__FiatValue>
                              ($671.23)
                    </TransactionHistoryDetail.style__FiatValue>
                    <TransactionHistoryDetail.style__TransactionHistoryTime>
                              12/17/1995
                    </TransactionHistoryDetail.style__TransactionHistoryTime>
          </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
        "showArrow": false,
        "style": Object {
          "border": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TransactionHistoryDetail.style__TransactionId
              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
              target="_blank"
>
              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
            <div
              style={
                            Object {
                                          "marginBottom": 5,
                                        }
              }
>
              <TransactionHistoryDetail.style__GreenTextWrapper>
                            1 
              </TransactionHistoryDetail.style__GreenTextWrapper>
              <TransactionHistoryDetail.style__TransactionStatus>
                            confirmation
              </TransactionHistoryDetail.style__TransactionStatus>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <TransactionHistoryDetail.style__GreenTextWrapper>
                  1 
</TransactionHistoryDetail.style__GreenTextWrapper>,
                false,
                <TransactionHistoryDetail.style__TransactionStatus>
                  confirmation
</TransactionHistoryDetail.style__TransactionStatus>,
                false,
              ],
              "style": Object {
                "marginBottom": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "1 ",
                },
                "ref": null,
                "rendered": "1 ",
                "type": [Function],
              },
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "confirmation",
                },
                "ref": null,
                "rendered": "confirmation",
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <TransactionHistoryDetail.style__DetailPanel
          header={
                    <TransactionHistoryDetail.style__Wrapper>
                              <TransactionHistoryDetail.style__Left>
                                        <TransactionHistoryDetail.style__TypeIcon
                                                  type="download"
                                        />
                                        <TransactionHistoryDetail.style__TypeText>
                                                  Recieved from
                                        </TransactionHistoryDetail.style__TypeText>
                                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                                  0x00000000028942
                                        </TransactionHistoryDetail.style__GreenTextWrapper>
                              </TransactionHistoryDetail.style__Left>
                              <TransactionHistoryDetail.style__DetailsWrapper>
                                        <TransactionHistoryDetail.style__Amount>
                                                  <TransactionHistoryItem.style__Received>
                                                            +
                                                            0.0011
                                                  </TransactionHistoryItem.style__Received>
                                        </TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryDetail.style__FiatValue>
                                                  ($671.23)
                                        </TransactionHistoryDetail.style__FiatValue>
                                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                                  12/17/1995
                                        </TransactionHistoryDetail.style__TransactionHistoryTime>
                              </TransactionHistoryDetail.style__DetailsWrapper>
                    </TransactionHistoryDetail.style__Wrapper>
          }
          showArrow={false}
          style={
                    Object {
                              "border": 0,
                            }
          }
>
          <div>
                    <TransactionHistoryDetail.style__TransactionId
                              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                              target="_blank"
                    >
                              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                    </TransactionHistoryDetail.style__TransactionId>
                    <div
                              style={
                                        Object {
                                                  "marginBottom": 5,
                                                }
                              }
                    >
                              <TransactionHistoryDetail.style__GreenTextWrapper>
                                        1 
                              </TransactionHistoryDetail.style__GreenTextWrapper>
                              <TransactionHistoryDetail.style__TransactionStatus>
                                        confirmation
                              </TransactionHistoryDetail.style__TransactionStatus>
                    </div>
          </div>
</TransactionHistoryDetail.style__DetailPanel>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
            >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
            </TransactionHistoryDetail.style__TransactionId>
            <div
                        style={
                                    Object {
                                                "marginBottom": 5,
                                              }
                        }
            >
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    1 
                        </TransactionHistoryDetail.style__GreenTextWrapper>
                        <TransactionHistoryDetail.style__TransactionStatus>
                                    confirmation
                        </TransactionHistoryDetail.style__TransactionStatus>
            </div>
</div>,
          "header": <TransactionHistoryDetail.style__Wrapper>
            <TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__TypeIcon
                                    type="download"
                        />
                        <TransactionHistoryDetail.style__TypeText>
                                    Recieved from
                        </TransactionHistoryDetail.style__TypeText>
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    0x00000000028942
                        </TransactionHistoryDetail.style__GreenTextWrapper>
            </TransactionHistoryDetail.style__Left>
            <TransactionHistoryDetail.style__DetailsWrapper>
                        <TransactionHistoryDetail.style__Amount>
                                    <TransactionHistoryItem.style__Received>
                                                +
                                                0.0011
                                    </TransactionHistoryItem.style__Received>
                        </TransactionHistoryDetail.style__Amount>
                        <TransactionHistoryDetail.style__FiatValue>
                                    ($671.23)
                        </TransactionHistoryDetail.style__FiatValue>
                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                    12/17/1995
                        </TransactionHistoryDetail.style__TransactionHistoryTime>
            </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
          "showArrow": false,
          "style": Object {
            "border": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TransactionHistoryDetail.style__TransactionId
                href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                target="_blank"
>
                0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
              <div
                style={
                                Object {
                                                "marginBottom": 5,
                                              }
                }
>
                <TransactionHistoryDetail.style__GreenTextWrapper>
                                1 
                </TransactionHistoryDetail.style__GreenTextWrapper>
                <TransactionHistoryDetail.style__TransactionStatus>
                                confirmation
                </TransactionHistoryDetail.style__TransactionStatus>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <TransactionHistoryDetail.style__GreenTextWrapper>
                    1 
</TransactionHistoryDetail.style__GreenTextWrapper>,
                  false,
                  <TransactionHistoryDetail.style__TransactionStatus>
                    confirmation
</TransactionHistoryDetail.style__TransactionStatus>,
                  false,
                ],
                "style": Object {
                  "marginBottom": 5,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "1 ",
                  },
                  "ref": null,
                  "rendered": "1 ",
                  "type": [Function],
                },
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "confirmation",
                  },
                  "ref": null,
                  "rendered": "confirmation",
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<TransactionHistoryDetail /> should render correctly when tx pending 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TransactionHistoryDetail
    address="0x00000000028942"
    amount="0.0011"
    confirmations={0}
    fiatValue="671.23"
    time={1995-12-17T03:24:00.000Z}
    txnId="0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
    type="received"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bordered": false,
      "children": <TransactionHistoryDetail.style__DetailPanel
        header={
                <TransactionHistoryDetail.style__Wrapper>
                        <TransactionHistoryDetail.style__Left>
                                <TransactionHistoryDetail.style__TypeIcon
                                        type="download"
                                />
                                <TransactionHistoryDetail.style__TypeText>
                                        Recieved from
                                </TransactionHistoryDetail.style__TypeText>
                                <TransactionHistoryDetail.style__GreenTextWrapper>
                                        0x00000000028942
                                </TransactionHistoryDetail.style__GreenTextWrapper>
                        </TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__DetailsWrapper>
                                <TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryItem.style__Received>
                                                +
                                                0.0011
                                        </TransactionHistoryItem.style__Received>
                                </TransactionHistoryDetail.style__Amount>
                                <TransactionHistoryDetail.style__FiatValue>
                                        ($671.23)
                                </TransactionHistoryDetail.style__FiatValue>
                                <TransactionHistoryDetail.style__TransactionHistoryTime>
                                        12/17/1995
                                </TransactionHistoryDetail.style__TransactionHistoryTime>
                        </TransactionHistoryDetail.style__DetailsWrapper>
                </TransactionHistoryDetail.style__Wrapper>
        }
        showArrow={false}
        style={
                Object {
                        "border": 0,
                      }
        }
>
        <div>
                <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
                >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                </TransactionHistoryDetail.style__TransactionId>
                <div
                        style={
                                Object {
                                        "marginBottom": 5,
                                      }
                        }
                >
                        <TransactionHistoryDetail.style__TransactionStatus>
                                Transaction pending...
                        </TransactionHistoryDetail.style__TransactionStatus>
                </div>
        </div>
</TransactionHistoryDetail.style__DetailPanel>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": "1",
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <TransactionHistoryDetail.style__TransactionId
                    href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                    target="_blank"
          >
                    0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
          </TransactionHistoryDetail.style__TransactionId>
          <div
                    style={
                              Object {
                                        "marginBottom": 5,
                                      }
                    }
          >
                    <TransactionHistoryDetail.style__TransactionStatus>
                              Transaction pending...
                    </TransactionHistoryDetail.style__TransactionStatus>
          </div>
</div>,
        "header": <TransactionHistoryDetail.style__Wrapper>
          <TransactionHistoryDetail.style__Left>
                    <TransactionHistoryDetail.style__TypeIcon
                              type="download"
                    />
                    <TransactionHistoryDetail.style__TypeText>
                              Recieved from
                    </TransactionHistoryDetail.style__TypeText>
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              0x00000000028942
                    </TransactionHistoryDetail.style__GreenTextWrapper>
          </TransactionHistoryDetail.style__Left>
          <TransactionHistoryDetail.style__DetailsWrapper>
                    <TransactionHistoryDetail.style__Amount>
                              <TransactionHistoryItem.style__Received>
                                        +
                                        0.0011
                              </TransactionHistoryItem.style__Received>
                    </TransactionHistoryDetail.style__Amount>
                    <TransactionHistoryDetail.style__FiatValue>
                              ($671.23)
                    </TransactionHistoryDetail.style__FiatValue>
                    <TransactionHistoryDetail.style__TransactionHistoryTime>
                              12/17/1995
                    </TransactionHistoryDetail.style__TransactionHistoryTime>
          </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
        "showArrow": false,
        "style": Object {
          "border": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TransactionHistoryDetail.style__TransactionId
              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
              target="_blank"
>
              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
            <div
              style={
                            Object {
                                          "marginBottom": 5,
                                        }
              }
>
              <TransactionHistoryDetail.style__TransactionStatus>
                            Transaction pending...
              </TransactionHistoryDetail.style__TransactionStatus>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                false,
                <TransactionHistoryDetail.style__TransactionStatus>
                  Transaction pending...
</TransactionHistoryDetail.style__TransactionStatus>,
                false,
                false,
              ],
              "style": Object {
                "marginBottom": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Transaction pending...",
                },
                "ref": null,
                "rendered": "Transaction pending...",
                "type": [Function],
              },
              false,
              false,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <TransactionHistoryDetail.style__DetailPanel
          header={
                    <TransactionHistoryDetail.style__Wrapper>
                              <TransactionHistoryDetail.style__Left>
                                        <TransactionHistoryDetail.style__TypeIcon
                                                  type="download"
                                        />
                                        <TransactionHistoryDetail.style__TypeText>
                                                  Recieved from
                                        </TransactionHistoryDetail.style__TypeText>
                                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                                  0x00000000028942
                                        </TransactionHistoryDetail.style__GreenTextWrapper>
                              </TransactionHistoryDetail.style__Left>
                              <TransactionHistoryDetail.style__DetailsWrapper>
                                        <TransactionHistoryDetail.style__Amount>
                                                  <TransactionHistoryItem.style__Received>
                                                            +
                                                            0.0011
                                                  </TransactionHistoryItem.style__Received>
                                        </TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryDetail.style__FiatValue>
                                                  ($671.23)
                                        </TransactionHistoryDetail.style__FiatValue>
                                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                                  12/17/1995
                                        </TransactionHistoryDetail.style__TransactionHistoryTime>
                              </TransactionHistoryDetail.style__DetailsWrapper>
                    </TransactionHistoryDetail.style__Wrapper>
          }
          showArrow={false}
          style={
                    Object {
                              "border": 0,
                            }
          }
>
          <div>
                    <TransactionHistoryDetail.style__TransactionId
                              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                              target="_blank"
                    >
                              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                    </TransactionHistoryDetail.style__TransactionId>
                    <div
                              style={
                                        Object {
                                                  "marginBottom": 5,
                                                }
                              }
                    >
                              <TransactionHistoryDetail.style__TransactionStatus>
                                        Transaction pending...
                              </TransactionHistoryDetail.style__TransactionStatus>
                    </div>
          </div>
</TransactionHistoryDetail.style__DetailPanel>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
            >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
            </TransactionHistoryDetail.style__TransactionId>
            <div
                        style={
                                    Object {
                                                "marginBottom": 5,
                                              }
                        }
            >
                        <TransactionHistoryDetail.style__TransactionStatus>
                                    Transaction pending...
                        </TransactionHistoryDetail.style__TransactionStatus>
            </div>
</div>,
          "header": <TransactionHistoryDetail.style__Wrapper>
            <TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__TypeIcon
                                    type="download"
                        />
                        <TransactionHistoryDetail.style__TypeText>
                                    Recieved from
                        </TransactionHistoryDetail.style__TypeText>
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    0x00000000028942
                        </TransactionHistoryDetail.style__GreenTextWrapper>
            </TransactionHistoryDetail.style__Left>
            <TransactionHistoryDetail.style__DetailsWrapper>
                        <TransactionHistoryDetail.style__Amount>
                                    <TransactionHistoryItem.style__Received>
                                                +
                                                0.0011
                                    </TransactionHistoryItem.style__Received>
                        </TransactionHistoryDetail.style__Amount>
                        <TransactionHistoryDetail.style__FiatValue>
                                    ($671.23)
                        </TransactionHistoryDetail.style__FiatValue>
                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                    12/17/1995
                        </TransactionHistoryDetail.style__TransactionHistoryTime>
            </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
          "showArrow": false,
          "style": Object {
            "border": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TransactionHistoryDetail.style__TransactionId
                href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                target="_blank"
>
                0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
              <div
                style={
                                Object {
                                                "marginBottom": 5,
                                              }
                }
>
                <TransactionHistoryDetail.style__TransactionStatus>
                                Transaction pending...
                </TransactionHistoryDetail.style__TransactionStatus>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  false,
                  <TransactionHistoryDetail.style__TransactionStatus>
                    Transaction pending...
</TransactionHistoryDetail.style__TransactionStatus>,
                  false,
                  false,
                ],
                "style": Object {
                  "marginBottom": 5,
                },
              },
              "ref": null,
              "rendered": Array [
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Transaction pending...",
                  },
                  "ref": null,
                  "rendered": "Transaction pending...",
                  "type": [Function],
                },
                false,
                false,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<TransactionHistoryDetail /> should render type recieved correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TransactionHistoryDetail
    address="0x00000000028942"
    amount="0.0011"
    confirmations={204}
    fiatValue="671.23"
    time={1995-12-17T03:24:00.000Z}
    txnId="0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
    type="received"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bordered": false,
      "children": <TransactionHistoryDetail.style__DetailPanel
        header={
                <TransactionHistoryDetail.style__Wrapper>
                        <TransactionHistoryDetail.style__Left>
                                <TransactionHistoryDetail.style__TypeIcon
                                        type="download"
                                />
                                <TransactionHistoryDetail.style__TypeText>
                                        Recieved from
                                </TransactionHistoryDetail.style__TypeText>
                                <TransactionHistoryDetail.style__GreenTextWrapper>
                                        0x00000000028942
                                </TransactionHistoryDetail.style__GreenTextWrapper>
                        </TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__DetailsWrapper>
                                <TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryItem.style__Received>
                                                +
                                                0.0011
                                        </TransactionHistoryItem.style__Received>
                                </TransactionHistoryDetail.style__Amount>
                                <TransactionHistoryDetail.style__FiatValue>
                                        ($671.23)
                                </TransactionHistoryDetail.style__FiatValue>
                                <TransactionHistoryDetail.style__TransactionHistoryTime>
                                        12/17/1995
                                </TransactionHistoryDetail.style__TransactionHistoryTime>
                        </TransactionHistoryDetail.style__DetailsWrapper>
                </TransactionHistoryDetail.style__Wrapper>
        }
        showArrow={false}
        style={
                Object {
                        "border": 0,
                      }
        }
>
        <div>
                <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
                >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                </TransactionHistoryDetail.style__TransactionId>
                <div
                        style={
                                Object {
                                        "marginBottom": 5,
                                      }
                        }
                >
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                204 
                        </TransactionHistoryDetail.style__GreenTextWrapper>
                        <TransactionHistoryDetail.style__TransactionStatus>
                                 confirmations
                        </TransactionHistoryDetail.style__TransactionStatus>
                </div>
        </div>
</TransactionHistoryDetail.style__DetailPanel>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": "1",
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <TransactionHistoryDetail.style__TransactionId
                    href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                    target="_blank"
          >
                    0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
          </TransactionHistoryDetail.style__TransactionId>
          <div
                    style={
                              Object {
                                        "marginBottom": 5,
                                      }
                    }
          >
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              204 
                    </TransactionHistoryDetail.style__GreenTextWrapper>
                    <TransactionHistoryDetail.style__TransactionStatus>
                               confirmations
                    </TransactionHistoryDetail.style__TransactionStatus>
          </div>
</div>,
        "header": <TransactionHistoryDetail.style__Wrapper>
          <TransactionHistoryDetail.style__Left>
                    <TransactionHistoryDetail.style__TypeIcon
                              type="download"
                    />
                    <TransactionHistoryDetail.style__TypeText>
                              Recieved from
                    </TransactionHistoryDetail.style__TypeText>
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              0x00000000028942
                    </TransactionHistoryDetail.style__GreenTextWrapper>
          </TransactionHistoryDetail.style__Left>
          <TransactionHistoryDetail.style__DetailsWrapper>
                    <TransactionHistoryDetail.style__Amount>
                              <TransactionHistoryItem.style__Received>
                                        +
                                        0.0011
                              </TransactionHistoryItem.style__Received>
                    </TransactionHistoryDetail.style__Amount>
                    <TransactionHistoryDetail.style__FiatValue>
                              ($671.23)
                    </TransactionHistoryDetail.style__FiatValue>
                    <TransactionHistoryDetail.style__TransactionHistoryTime>
                              12/17/1995
                    </TransactionHistoryDetail.style__TransactionHistoryTime>
          </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
        "showArrow": false,
        "style": Object {
          "border": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TransactionHistoryDetail.style__TransactionId
              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
              target="_blank"
>
              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
            <div
              style={
                            Object {
                                          "marginBottom": 5,
                                        }
              }
>
              <TransactionHistoryDetail.style__GreenTextWrapper>
                            204 
              </TransactionHistoryDetail.style__GreenTextWrapper>
              <TransactionHistoryDetail.style__TransactionStatus>
                             confirmations
              </TransactionHistoryDetail.style__TransactionStatus>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <TransactionHistoryDetail.style__GreenTextWrapper>
                  204 
</TransactionHistoryDetail.style__GreenTextWrapper>,
                false,
                false,
                <TransactionHistoryDetail.style__TransactionStatus>
                   confirmations
</TransactionHistoryDetail.style__TransactionStatus>,
              ],
              "style": Object {
                "marginBottom": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "204 ",
                },
                "ref": null,
                "rendered": "204 ",
                "type": [Function],
              },
              false,
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": " confirmations",
                },
                "ref": null,
                "rendered": " confirmations",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <TransactionHistoryDetail.style__DetailPanel
          header={
                    <TransactionHistoryDetail.style__Wrapper>
                              <TransactionHistoryDetail.style__Left>
                                        <TransactionHistoryDetail.style__TypeIcon
                                                  type="download"
                                        />
                                        <TransactionHistoryDetail.style__TypeText>
                                                  Recieved from
                                        </TransactionHistoryDetail.style__TypeText>
                                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                                  0x00000000028942
                                        </TransactionHistoryDetail.style__GreenTextWrapper>
                              </TransactionHistoryDetail.style__Left>
                              <TransactionHistoryDetail.style__DetailsWrapper>
                                        <TransactionHistoryDetail.style__Amount>
                                                  <TransactionHistoryItem.style__Received>
                                                            +
                                                            0.0011
                                                  </TransactionHistoryItem.style__Received>
                                        </TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryDetail.style__FiatValue>
                                                  ($671.23)
                                        </TransactionHistoryDetail.style__FiatValue>
                                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                                  12/17/1995
                                        </TransactionHistoryDetail.style__TransactionHistoryTime>
                              </TransactionHistoryDetail.style__DetailsWrapper>
                    </TransactionHistoryDetail.style__Wrapper>
          }
          showArrow={false}
          style={
                    Object {
                              "border": 0,
                            }
          }
>
          <div>
                    <TransactionHistoryDetail.style__TransactionId
                              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                              target="_blank"
                    >
                              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                    </TransactionHistoryDetail.style__TransactionId>
                    <div
                              style={
                                        Object {
                                                  "marginBottom": 5,
                                                }
                              }
                    >
                              <TransactionHistoryDetail.style__GreenTextWrapper>
                                        204 
                              </TransactionHistoryDetail.style__GreenTextWrapper>
                              <TransactionHistoryDetail.style__TransactionStatus>
                                         confirmations
                              </TransactionHistoryDetail.style__TransactionStatus>
                    </div>
          </div>
</TransactionHistoryDetail.style__DetailPanel>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
            >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
            </TransactionHistoryDetail.style__TransactionId>
            <div
                        style={
                                    Object {
                                                "marginBottom": 5,
                                              }
                        }
            >
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    204 
                        </TransactionHistoryDetail.style__GreenTextWrapper>
                        <TransactionHistoryDetail.style__TransactionStatus>
                                     confirmations
                        </TransactionHistoryDetail.style__TransactionStatus>
            </div>
</div>,
          "header": <TransactionHistoryDetail.style__Wrapper>
            <TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__TypeIcon
                                    type="download"
                        />
                        <TransactionHistoryDetail.style__TypeText>
                                    Recieved from
                        </TransactionHistoryDetail.style__TypeText>
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    0x00000000028942
                        </TransactionHistoryDetail.style__GreenTextWrapper>
            </TransactionHistoryDetail.style__Left>
            <TransactionHistoryDetail.style__DetailsWrapper>
                        <TransactionHistoryDetail.style__Amount>
                                    <TransactionHistoryItem.style__Received>
                                                +
                                                0.0011
                                    </TransactionHistoryItem.style__Received>
                        </TransactionHistoryDetail.style__Amount>
                        <TransactionHistoryDetail.style__FiatValue>
                                    ($671.23)
                        </TransactionHistoryDetail.style__FiatValue>
                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                    12/17/1995
                        </TransactionHistoryDetail.style__TransactionHistoryTime>
            </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
          "showArrow": false,
          "style": Object {
            "border": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TransactionHistoryDetail.style__TransactionId
                href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                target="_blank"
>
                0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
              <div
                style={
                                Object {
                                                "marginBottom": 5,
                                              }
                }
>
                <TransactionHistoryDetail.style__GreenTextWrapper>
                                204 
                </TransactionHistoryDetail.style__GreenTextWrapper>
                <TransactionHistoryDetail.style__TransactionStatus>
                                 confirmations
                </TransactionHistoryDetail.style__TransactionStatus>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <TransactionHistoryDetail.style__GreenTextWrapper>
                    204 
</TransactionHistoryDetail.style__GreenTextWrapper>,
                  false,
                  false,
                  <TransactionHistoryDetail.style__TransactionStatus>
                     confirmations
</TransactionHistoryDetail.style__TransactionStatus>,
                ],
                "style": Object {
                  "marginBottom": 5,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "204 ",
                  },
                  "ref": null,
                  "rendered": "204 ",
                  "type": [Function],
                },
                false,
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": " confirmations",
                  },
                  "ref": null,
                  "rendered": " confirmations",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<TransactionHistoryDetail /> should render type sent correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TransactionHistoryDetail
    address="0x00000000028942"
    amount="0.0011"
    confirmations={204}
    fiatValue="671.23"
    time={1995-12-17T03:24:00.000Z}
    txnId="0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
    type="sent"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bordered": false,
      "children": <TransactionHistoryDetail.style__DetailPanel
        header={
                <TransactionHistoryDetail.style__Wrapper>
                        <TransactionHistoryDetail.style__Left>
                                <TransactionHistoryDetail.style__TypeIcon
                                        type="upload"
                                />
                                <TransactionHistoryDetail.style__TypeText>
                                        Sent to
                                </TransactionHistoryDetail.style__TypeText>
                                <TransactionHistoryDetail.style__GreenTextWrapper>
                                        0x00000000028942
                                </TransactionHistoryDetail.style__GreenTextWrapper>
                        </TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__DetailsWrapper>
                                <TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryItem.style__Sent>
                                                -
                                                0.0011
                                        </TransactionHistoryItem.style__Sent>
                                </TransactionHistoryDetail.style__Amount>
                                <TransactionHistoryDetail.style__FiatValue>
                                        ($671.23)
                                </TransactionHistoryDetail.style__FiatValue>
                                <TransactionHistoryDetail.style__TransactionHistoryTime>
                                        12/17/1995
                                </TransactionHistoryDetail.style__TransactionHistoryTime>
                        </TransactionHistoryDetail.style__DetailsWrapper>
                </TransactionHistoryDetail.style__Wrapper>
        }
        showArrow={false}
        style={
                Object {
                        "border": 0,
                      }
        }
>
        <div>
                <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
                >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                </TransactionHistoryDetail.style__TransactionId>
                <div
                        style={
                                Object {
                                        "marginBottom": 5,
                                      }
                        }
                >
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                204 
                        </TransactionHistoryDetail.style__GreenTextWrapper>
                        <TransactionHistoryDetail.style__TransactionStatus>
                                 confirmations
                        </TransactionHistoryDetail.style__TransactionStatus>
                </div>
        </div>
</TransactionHistoryDetail.style__DetailPanel>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": "1",
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <TransactionHistoryDetail.style__TransactionId
                    href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                    target="_blank"
          >
                    0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
          </TransactionHistoryDetail.style__TransactionId>
          <div
                    style={
                              Object {
                                        "marginBottom": 5,
                                      }
                    }
          >
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              204 
                    </TransactionHistoryDetail.style__GreenTextWrapper>
                    <TransactionHistoryDetail.style__TransactionStatus>
                               confirmations
                    </TransactionHistoryDetail.style__TransactionStatus>
          </div>
</div>,
        "header": <TransactionHistoryDetail.style__Wrapper>
          <TransactionHistoryDetail.style__Left>
                    <TransactionHistoryDetail.style__TypeIcon
                              type="upload"
                    />
                    <TransactionHistoryDetail.style__TypeText>
                              Sent to
                    </TransactionHistoryDetail.style__TypeText>
                    <TransactionHistoryDetail.style__GreenTextWrapper>
                              0x00000000028942
                    </TransactionHistoryDetail.style__GreenTextWrapper>
          </TransactionHistoryDetail.style__Left>
          <TransactionHistoryDetail.style__DetailsWrapper>
                    <TransactionHistoryDetail.style__Amount>
                              <TransactionHistoryItem.style__Sent>
                                        -
                                        0.0011
                              </TransactionHistoryItem.style__Sent>
                    </TransactionHistoryDetail.style__Amount>
                    <TransactionHistoryDetail.style__FiatValue>
                              ($671.23)
                    </TransactionHistoryDetail.style__FiatValue>
                    <TransactionHistoryDetail.style__TransactionHistoryTime>
                              12/17/1995
                    </TransactionHistoryDetail.style__TransactionHistoryTime>
          </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
        "showArrow": false,
        "style": Object {
          "border": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TransactionHistoryDetail.style__TransactionId
              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
              target="_blank"
>
              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
            <div
              style={
                            Object {
                                          "marginBottom": 5,
                                        }
              }
>
              <TransactionHistoryDetail.style__GreenTextWrapper>
                            204 
              </TransactionHistoryDetail.style__GreenTextWrapper>
              <TransactionHistoryDetail.style__TransactionStatus>
                             confirmations
              </TransactionHistoryDetail.style__TransactionStatus>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <TransactionHistoryDetail.style__GreenTextWrapper>
                  204 
</TransactionHistoryDetail.style__GreenTextWrapper>,
                false,
                false,
                <TransactionHistoryDetail.style__TransactionStatus>
                   confirmations
</TransactionHistoryDetail.style__TransactionStatus>,
              ],
              "style": Object {
                "marginBottom": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "204 ",
                },
                "ref": null,
                "rendered": "204 ",
                "type": [Function],
              },
              false,
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": " confirmations",
                },
                "ref": null,
                "rendered": " confirmations",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <TransactionHistoryDetail.style__DetailPanel
          header={
                    <TransactionHistoryDetail.style__Wrapper>
                              <TransactionHistoryDetail.style__Left>
                                        <TransactionHistoryDetail.style__TypeIcon
                                                  type="upload"
                                        />
                                        <TransactionHistoryDetail.style__TypeText>
                                                  Sent to
                                        </TransactionHistoryDetail.style__TypeText>
                                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                                  0x00000000028942
                                        </TransactionHistoryDetail.style__GreenTextWrapper>
                              </TransactionHistoryDetail.style__Left>
                              <TransactionHistoryDetail.style__DetailsWrapper>
                                        <TransactionHistoryDetail.style__Amount>
                                                  <TransactionHistoryItem.style__Sent>
                                                            -
                                                            0.0011
                                                  </TransactionHistoryItem.style__Sent>
                                        </TransactionHistoryDetail.style__Amount>
                                        <TransactionHistoryDetail.style__FiatValue>
                                                  ($671.23)
                                        </TransactionHistoryDetail.style__FiatValue>
                                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                                  12/17/1995
                                        </TransactionHistoryDetail.style__TransactionHistoryTime>
                              </TransactionHistoryDetail.style__DetailsWrapper>
                    </TransactionHistoryDetail.style__Wrapper>
          }
          showArrow={false}
          style={
                    Object {
                              "border": 0,
                            }
          }
>
          <div>
                    <TransactionHistoryDetail.style__TransactionId
                              href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                              target="_blank"
                    >
                              0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
                    </TransactionHistoryDetail.style__TransactionId>
                    <div
                              style={
                                        Object {
                                                  "marginBottom": 5,
                                                }
                              }
                    >
                              <TransactionHistoryDetail.style__GreenTextWrapper>
                                        204 
                              </TransactionHistoryDetail.style__GreenTextWrapper>
                              <TransactionHistoryDetail.style__TransactionStatus>
                                         confirmations
                              </TransactionHistoryDetail.style__TransactionStatus>
                    </div>
          </div>
</TransactionHistoryDetail.style__DetailPanel>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <TransactionHistoryDetail.style__TransactionId
                        href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                        target="_blank"
            >
                        0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
            </TransactionHistoryDetail.style__TransactionId>
            <div
                        style={
                                    Object {
                                                "marginBottom": 5,
                                              }
                        }
            >
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    204 
                        </TransactionHistoryDetail.style__GreenTextWrapper>
                        <TransactionHistoryDetail.style__TransactionStatus>
                                     confirmations
                        </TransactionHistoryDetail.style__TransactionStatus>
            </div>
</div>,
          "header": <TransactionHistoryDetail.style__Wrapper>
            <TransactionHistoryDetail.style__Left>
                        <TransactionHistoryDetail.style__TypeIcon
                                    type="upload"
                        />
                        <TransactionHistoryDetail.style__TypeText>
                                    Sent to
                        </TransactionHistoryDetail.style__TypeText>
                        <TransactionHistoryDetail.style__GreenTextWrapper>
                                    0x00000000028942
                        </TransactionHistoryDetail.style__GreenTextWrapper>
            </TransactionHistoryDetail.style__Left>
            <TransactionHistoryDetail.style__DetailsWrapper>
                        <TransactionHistoryDetail.style__Amount>
                                    <TransactionHistoryItem.style__Sent>
                                                -
                                                0.0011
                                    </TransactionHistoryItem.style__Sent>
                        </TransactionHistoryDetail.style__Amount>
                        <TransactionHistoryDetail.style__FiatValue>
                                    ($671.23)
                        </TransactionHistoryDetail.style__FiatValue>
                        <TransactionHistoryDetail.style__TransactionHistoryTime>
                                    12/17/1995
                        </TransactionHistoryDetail.style__TransactionHistoryTime>
            </TransactionHistoryDetail.style__DetailsWrapper>
</TransactionHistoryDetail.style__Wrapper>,
          "showArrow": false,
          "style": Object {
            "border": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TransactionHistoryDetail.style__TransactionId
                href="https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23"
                target="_blank"
>
                0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23
</TransactionHistoryDetail.style__TransactionId>,
              <div
                style={
                                Object {
                                                "marginBottom": 5,
                                              }
                }
>
                <TransactionHistoryDetail.style__GreenTextWrapper>
                                204 
                </TransactionHistoryDetail.style__GreenTextWrapper>
                <TransactionHistoryDetail.style__TransactionStatus>
                                 confirmations
                </TransactionHistoryDetail.style__TransactionStatus>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "href": "https://ropsten.etherscan.io/tx/0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "0xb2682160c482eB985EC9F3e364eEc0a904C44C2360c482eB985EC9F3e364eEc0a904C44C23",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <TransactionHistoryDetail.style__GreenTextWrapper>
                    204 
</TransactionHistoryDetail.style__GreenTextWrapper>,
                  false,
                  false,
                  <TransactionHistoryDetail.style__TransactionStatus>
                     confirmations
</TransactionHistoryDetail.style__TransactionStatus>,
                ],
                "style": Object {
                  "marginBottom": 5,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "204 ",
                  },
                  "ref": null,
                  "rendered": "204 ",
                  "type": [Function],
                },
                false,
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": " confirmations",
                  },
                  "ref": null,
                  "rendered": " confirmations",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
